--- a/pcbnew/CMakeLists.txt
+++ b/pcbnew/CMakeLists.txt
@@ -308,6 +308,7 @@ set( PCBNEW_CLASS_SRCS
     zones_functions_for_undo_redo.cpp
     zones_test_and_combine_areas.cpp
 
+    tools/convert_tool.cpp
     tools/drawing_tool.cpp
     tools/edit_constraints.cpp
     tools/edit_points.cpp
