New connectivity algorithm and bus upgrades
Bus upgrades: core new connectivity code

Bus upgrades: eeschema integration and modifications

Bus upgrades: eeschema dialogs

Bus upgrades: netlist export

Bus upgrades: file format changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -585,7 +585,7 @@ find_package( Pixman 0.30 REQUIRED )
 
 #
 # Find Boost headers, required.
-find_package( Boost 1.54.0 REQUIRED )
+find_package( Boost 1.54.0 REQUIRED COMPONENTS regex )
 
 # Include MinGW resource compiler.
 include( MinGWResourceCompiler )
